# cortex-core

./: .gitignore  LICENSE  README.md
cortex-data/: Cargo.toml  settings.rs
