[package]
name = "cortex-core"
version = "0.1.0"
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.6"
actix-web = "0.7.13"
dotenv = "0.13.0"
futures = "0.1.25"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
num_cpus = "1.8.0"
failure = "0.1.3"
failure_derive = "0.1.3"

[dependencies.diesel]
features = ["postgres", "r2d2", "chrono"]
version = "1.3.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"
